--- a/css/index.css
+++ b/css/index.css
@@ -18,6 +18,7 @@
       align-items: center;
       padding-top: 30px !important;
       padding-bottom: 30px !important;
+      margin-bottom: 17px;
     }
 
     .banner-window {
