--- a/css/estilos-generales.css
+++ b/css/estilos-generales.css
@@ -32,6 +32,11 @@
       justify-content: space-between;
       align-items: center;
       margin-bottom: 12px;
+      transition: all 0.2s ease-in-out;
+    }
+    .cart-item:hover{
+      transform: scale(1.03) translateY(-4px);
+      background: #eeeeee;
     }
     .product-img {
       width: 80px;
@@ -108,7 +113,7 @@
     
 
     /* RESPONSIVE */
-    @media (max-width: 576px) {
+    @media (max-width: 900px) {
       .cart-item {
         flex-direction: column;
         align-items: flex-start;
@@ -125,7 +130,7 @@
         margin-bottom: 8px;
       }
       .product-name {
-        max-width: 60vw;
+        max-width: 45vw;
       }
       .cart-footer .btn {
         width: 100%;
@@ -133,6 +138,12 @@
       }
       .btn-remove{
         width: 30px !important;
+      }
+    }
+
+    @media (max-width: 600px){
+      .product-name {
+        max-width: 60vw;
       }
     }
 
