--- a/css/estilos-generales.css
+++ b/css/estilos-generales.css
@@ -112,7 +112,6 @@
 
     
 
-    /* RESPONSIVE */
     @media (max-width: 900px) {
       .cart-item {
         flex-direction: column;
@@ -148,3 +147,114 @@
     }
 
 /*Fin del carrito de compras*/
+
+
+/* Contenedor general botones flotantes*/
+.botones-flotantes {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  z-index: 1000;
+}
+
+/* Estilo base de todos los botones */
+.btn-flotante {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  border: none;
+  border-radius: 50px;
+  padding: 10px 15px;
+  font-size: 14px;
+  font-weight: 500;
+  color: #fff;
+  cursor: pointer;
+  text-decoration: none;
+  transition: all 0.3s ease;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.25);
+}
+
+/* WhatsApp */
+.btn-flotante.whatsapp {
+  background-color: #25D366;
+}
+
+.btn-flotante.whatsapp .texto-boton{
+  font-size: 12px;
+}
+
+/* Carrito */
+.btn-flotante.carrito {
+  display: flex;
+  background-color: #000;
+  transition: all 0.8s ease;
+  opacity: 0;
+  transform: scale(0.8);
+  pointer-events: none;
+}
+.btn-flotante.carrito.show {
+  opacity: 1;
+  transform: scale(1);
+  pointer-events: auto;
+}
+
+/* Volver arriba */
+.btn-volver-arriba {
+  width: 52px;
+  height: 52px;
+  border-radius: 50%;
+  background-color: rgb(228, 30, 30);
+  color: #fff;
+  border: none;
+  font-size: 22.5px;
+  font-weight: bold;
+  display: flex; 
+  align-self: flex-end;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: all 0.8s ease;
+  opacity: 0;
+  transform: scale(0.8);
+  pointer-events: none;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.25);
+}
+
+.btn-volver-arriba.show {
+  opacity: 1;
+  transform: scale(1);
+  pointer-events: auto;
+}
+
+/* Efecto hover */
+.btn-flotante:hover,
+.btn-volver-arriba:hover,
+.btn-flotante.carrito.show:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+}
+
+
+@media (max-width: 768px) {
+  .btn-flotante {
+    border-radius: 50%;
+    padding: 12px;
+    justify-content: center;
+  }
+
+  .btn-flotante .texto-boton {
+    display: none;
+  }
+
+  .btn-flotante i {
+    font-size: 20px;
+  }
+  .btn-volver-arriba{
+    display: none !important;
+  }
+}
+
+/* Fin botones flotantes*/
