--- a/css/finalizarPedido.css
+++ b/css/finalizarPedido.css
@@ -62,6 +62,13 @@
     .info-label{
       color: rgb(90, 90, 90) !important;
     }
+    #botonConfirmarPedido{
+      transition: all 0.2s ease-in-out;
+    }
+    #botonConfirmarPedido:hover{
+      transform: scale(1.03) translateY(-4px);
+      background-color: rgb(180, 0, 0) !important;
+    }
 
 @media (max-width: 1350px){
     #contenedor-pedido{
@@ -81,4 +88,10 @@
     max-width: 60vw;
     font-size: 1.05rem;
     }
+}
+
+@media (min-width: 1144px){
+  .informacion-pedido{
+    width: 75vw !important;
+  }
 }
